Setting cursorTimeoutMillis to a duration larger than milliseconds since the epoch can crash mongos

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.5.9
    • Affects Version/s: None
    • Component/s: Querying
    • None
    • Minor Change
    • ALL
    • v3.4
    • Hide
      db.adminCommand({setParameter: 1, cursorTimeoutMillis: 18446744073709552000})
      
      Show
      db.adminCommand({setParameter: 1, cursorTimeoutMillis: 18446744073709552000})
    • Query 2017-05-08, Query 2017-05-29, Query 2017-06-19
    • 49
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      black-cherry(mongos-3.4.3)[mongos] test> db.adminCommand({setParameter: 1, cursorTimeoutMillis: 18446744073709552000})
      {
        "was": NumberLong("0"),
        "ok": 1
      }
      black-cherry(mongos-3.4.3)[mongos] test>
      2017-04-18T10:50:44.565-0400 I NETWORK  [thread1] trying reconnect to 127.0.0.1:27017 (127.0.0.1) failed
      2017-04-18T10:50:44.566-0400 W NETWORK  [thread1] Failed to connect to 127.0.0.1:27017, in(checking socket for error after poll), reason: Connection refused
      2017-04-18T10:50:44.566-0400 I NETWORK  [thread1] reconnect 127.0.0.1:27017 (127.0.0.1) failed failed
      
      2017-04-18T10:50:44.360-0400 E COMMAND  [ClusterCursorCleanupJob] backgroundjob ClusterCursorCleanupJob exception: Cannot negate the minimum duration
      2017-04-18T10:50:44.362-0400 F -        [ClusterCursorCleanupJob] terminate() called. An exception is active; attempting to gather more information
      2017-04-18T10:50:44.366-0400 F -        [ClusterCursorCleanupJob] DBException::toString(): 159 Cannot negate the minimum duration
      Actual exception type: mongo::UserException
      
       0x10792880a 0x107927d6f 0x7fffa57add69 0x7fffa57ad9f2 0x1078a4246 0x1078a59f1 0x7fffa6db3aab 0x7fffa6db39f7 0x7fffa6db31fd
      ----- BEGIN BACKTRACE -----
      {"backtrace":[{"b":"1072D4000","o":"65480A","s":"_ZN5mongo15printStackTraceERNSt3__113basic_ostreamIcNS0_11char_traitsIcEEEE"},{"b":"1072D4000","o":"653D6F","s":"_ZN5mongo12_GLOBAL__N_111myTerminateEv"},{"b":"7FFFA578A000","o":"23D69","s":"_ZSt11__terminatePFvvE"},{"b":"7FFFA578A000","o":"239F2","s":"__cxa_rethrow"},{"b":"1072D4000","o":"5D0246","s":"_ZN5mongo13BackgroundJob7jobBodyEv"},{"b":"1072D4000","o":"5D19F1","s":"_ZNSt3__114__thread_proxyINS_5tupleIJNS_6__bindIMN5mongo13BackgroundJobEFvvEJPS4_EEEEEEEEPvSA_"},{"b":"7FFFA6DB0000","o":"3AAB","s":"_pthread_body"},{"b":"7FFFA6DB0000","o":"39F7","s":"_pthread_body"},{"b":"7FFFA6DB0000","o":"31FD","s":"thread_start"}],"processInfo":{ "mongodbVersion" : "3.4.3", "gitVersion" : "f07437fb5a6cca07c10bafa78365456eb1d6d5e1", "compiledModules" : [], "uname" : { "sysname" : "Darwin", "release" : "16.4.0", "version" : "Darwin Kernel Version 16.4.0: Thu Dec 22 22:53:21 PST 2016; root:xnu-3789.41.3~3/RELEASE_X86_64", "machine" : "x86_64" }, "somap" : [ { "path" : "/usr/local/bin/mongos", "machType" : 2, "b" : "1072D4000", "vmaddr" : "100000000", "buildId" : "B3B565CA13C73918B2525DD50CAB9FB1" }, { "path" : "/usr/lib/libssl.0.9.8.dylib", "machType" : 6, "b" : "7FFFA68A1000", "vmaddr" : "7FFF8A60E000", "buildId" : "6E690FB1A581302793B3060D9D497A27" }, { "path" : "/usr/lib/libcrypto.0.9.8.dylib", "machType" : 6, "b" : "7FFFA5898000", "vmaddr" : "7FFF89605000", "buildId" : "D41E190106DD3860BB4FB3ACE0284C01" }, { "path" : "/usr/lib/libSystem.B.dylib", "machType" : 6, "b" : "7FFFA55F9000", "vmaddr" : "7FFF89366000", "buildId" : "9CB018AF54E9300F82BE81FE553C9154" }, { "path" : "/System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation", "machType" : 6, "b" : "7FFF915BD000", "vmaddr" : "7FFF7532A000", "buildId" : "A40AA2247A50398995D05A228A0E2FAF" }, { "path" : "/System/Library/Frameworks/Security.framework/Versions/A/Security", "machType" : 6, "b" : "7FFF97AC3000", "vmaddr" : "7FFF7B830000", "buildId" : "A47D7BAE059131848E44FB2EB08A19C2" }, { "path" : "/usr/lib/libc++.1.dylib", "machType" : 6, "b" : "7FFFA5733000", "vmaddr" : "7FFF894A0000", "buildId" : "BEE86868F831384C919E2B286ACFE87C" }, { "path" : "/System/Library/PrivateFrameworks/TrustEvaluationAgent.framework/Versions/A/TrustEvaluationAgent", "machType" : 6, "b" : "7FFFA40F8000", "vmaddr" : "7FFF87E65000", "buildId" : "07C1F711A1E03BAC8F4D977516D50925" }, { "path" : "/usr/lib/libz.1.dylib", "machType" : 6, "b" : "7FFFA6A9E000", "vmaddr" : "7FFF8A80B000", "buildId" : "46E3FFA24328327A8D34A03E20BFFB8E" }, { "path" : "/usr/lib/system/libcache.dylib", "machType" : 6, "b" : "7FFFA6ABE000", "vmaddr" : "7FFF8A82B000", "buildId" : "0C8092D3600F3ADDA036F225B6CDCA43" }, { "path" : "/usr/lib/system/libcommonCrypto.dylib", "machType" : 6, "b" : "7FFFA6AC3000", "vmaddr" : "7FFF8A830000", "buildId" : "B16E29B6EC8D3A8F9A89DD9CF35F7C4B" }, { "path" : "/usr/lib/system/libcompiler_rt.dylib", "machType" : 6, "b" : "7FFFA6ACF000", "vmaddr" : "7FFF8A83C000", "buildId" : "E992E8D9037C3454A366A25E4D31D6BB" }, { "path" : "/usr/lib/system/libcopyfile.dylib", "machType" : 6, "b" : "7FFFA6AD7000", "vmaddr" : "7FFF8A844000", "buildId" : "64E285D95485333BAEE78B0C8FB9275F" }, { "path" : "/usr/lib/system/libcorecrypto.dylib", "machType" : 6, "b" : "7FFFA6AE0000", "vmaddr" : "7FFF8A84D000", "buildId" : "2074B932FD7930A98E90AF25C49F2AF1" }, { "path" : "/usr/lib/system/libdispatch.dylib", "machType" : 6, "b" : "7FFFA6B64000", "vmaddr" : "7FFF8A8D1000", "buildId" : "EA0CC14ED5593802B4B20E8C7579AAC4" }, { "path" : "/usr/lib/system/libdyld.dylib", "machType" : 6, "b" : "7FFFA6B97000", "vmaddr" : "7FFF8A904000", "buildId" : "6F506653FFF63DB884F1109AE3C52F32" }, { "path" : "/usr/lib/system/libkeymgr.dylib", "machType" : 6, "b" : "7FFFA6B9D000", "vmaddr" : "7FFF8A90A000", "buildId" : "1A31892312003B06B4325007D82F195D" }, { "path" : "/usr/lib/system/liblaunch.dylib", "machType" : 6, "b" : "7FFFA6BAB000", "vmaddr" : "7FFF8A918000", "buildId" : "15FACC21079A3BDF9AFB4253EFDEB587" }, { "path" : "/usr/lib/system/libmacho.dylib", "machType" : 6, "b" : "7FFFA6BAC000", "vmaddr" : "7FFF8A919000", "buildId" : "A2F38EC1C37C3B93B0E436B07C177F8C" }, { "path" : "/usr/lib/system/libquarantine.dylib", "machType" : 6, "b" : "7FFFA6BB2000", "vmaddr" : "7FFF8A91F000", "buildId" : "C1D7749F5F5F3BB9BEFC1F0B9DA941FD" }, { "path" : "/usr/lib/system/libremovefile.dylib", "machType" : 6, "b" : "7FFFA6BB5000", "vmaddr" : "7FFF8A922000", "buildId" : "CD42974EBE0B39FC9BFC8A7540A04DC6" }, { "path" : "/usr/lib/system/libsystem_asl.dylib", "machType" : 6, "b" : "7FFFA6BB7000", "vmaddr" : "7FFF8A924000", "buildId" : "EFAC72D7CB133DF7ADF3EC6635C6F1EA" }, { "path" : "/usr/lib/system/libsystem_blocks.dylib", "machType" : 6, "b" : "7FFFA6BD0000", "vmaddr" : "7FFF8A93D000", "buildId" : "B8C3701D5A913D35999D2DC8D5393525" }, { "path" : "/usr/lib/system/libsystem_c.dylib", "machType" : 6, "b" : "7FFFA6BD1000", "vmaddr" : "7FFF8A93E000", "buildId" : "2F88196203CB3B9DA782D98C1BBA4E3D" }, { "path" : "/usr/lib/system/libsystem_configuration.dylib", "machType" : 6, "b" : "7FFFA6C5F000", "vmaddr" : "7FFF8A9CC000", "buildId" : "4FE3983CE4ED3939A57803AD29C99788" }, { "path" : "/usr/lib/system/libsystem_coreservices.dylib", "machType" : 6, "b" : "7FFFA6C63000", "vmaddr" : "7FFF8A9D0000", "buildId" : "1A572B9E0C47320F8C647990D0A5FB5A" }, { "path" : "/usr/lib/system/libsystem_coretls.dylib", "machType" : 6, "b" : "7FFFA6C67000", "vmaddr" : "7FFF8A9D4000", "buildId" : "4676F06D274D31BEB61C4D7A4AEF4858" }, { "path" : "/usr/lib/system/libsystem_dnssd.dylib", "machType" : 6, "b" : "7FFFA6C80000", "vmaddr" : "7FFF8A9ED000", "buildId" : "DC708D84ED7D3936B996A67C66B8DDAA" }, { "path" : "/usr/lib/system/libsystem_info.dylib", "machType" : 6, "b" : "7FFFA6C87000", "vmaddr" : "7FFF8A9F4000", "buildId" : "9ED9121CF1113FADBC2FC95DEE1C9362" }, { "path" : "/usr/lib/system/libsystem_kernel.dylib", "machType" : 6, "b" : "7FFFA6CB1000", "vmaddr" : "7FFF8AA1E000", "buildId" : "B75B128C7D7A331891CD82B5A69C5329" }, { "path" : "/usr/lib/system/libsystem_m.dylib", "machType" : 6, "b" : "7FFFA6CD4000", "vmaddr" : "7FFF8AA41000", "buildId" : "266DB92BA86F369180FB1B26AD73CFF3" }, { "path" : "/usr/lib/system/libsystem_malloc.dylib", "machType" : 6, "b" : "7FFFA6D1C000", "vmaddr" : "7FFF8AA89000", "buildId" : "F40DEE3B386A3529A3F798117ED55BF4" }, { "path" : "/usr/lib/system/libsystem_network.dylib", "machType" : 6, "b" : "7FFFA6D3B000", "vmaddr" : "7FFF8AAA8000", "buildId" : "4AE368E9605D379DB04C2AC7455B8250" }, { "path" : "/usr/lib/system/libsystem_networkextension.dylib", "machType" : 6, "b" : "7FFFA6D93000", "vmaddr" : "7FFF8AB00000", "buildId" : "EB020B0C7DF03EEF8E3C15DA3C01D687" }, { "path" : "/usr/lib/system/libsystem_notify.dylib", "machType" : 6, "b" : "7FFFA6D9D000", "vmaddr" : "7FFF8AB0A000", "buildId" : "E7FD3A7CDD0736E29FA47561F9F114DA" }, { "path" : "/usr/lib/system/libsystem_platform.dylib", "machType" : 6, "b" : "7FFFA6DA7000", "vmaddr" : "7FFF8AB14000", "buildId" : "3CA06D4EC00A36DEAA653A390097D1F6" }, { "path" : "/usr/lib/system/libsystem_pthread.dylib", "machType" : 6, "b" : "7FFFA6DB0000", "vmaddr" : "7FFF8AB1D000", "buildId" : "C869ED7CBE2935328E693A8DA1447EDC" }, { "path" : "/usr/lib/system/libsystem_sandbox.dylib", "machType" : 6, "b" : "7FFFA6DBB000", "vmaddr" : "7FFF8AB28000", "buildId" : "7BBFDF96293F3DD9B3A47C168280B441" }, { "path" : "/usr/lib/system/libsystem_secinit.dylib", "machType" : 6, "b" : "7FFFA6DBF000", "vmaddr" : "7FFF8AB2C000", "buildId" : "5C1F1E470F7D3E258DEBD9DB1F902281" }, { "path" : "/usr/lib/system/libsystem_symptoms.dylib", "machType" : 6, "b" : "7FFFA6DC1000", "vmaddr" : "7FFF8AB2E000", "buildId" : "5D990CF5B58F39F7B37599B4EC62CFBD" }, { "path" : "/usr/lib/system/libsystem_trace.dylib", "machType" : 6, "b" : "7FFFA6DC9000", "vmaddr" : "7FFF8AB36000", "buildId" : "6D34D1EA2A3C3D2D803EA666E6AEEE52" }, { "path" : "/usr/lib/system/libunwind.dylib", "machType" : 6, "b" : "7FFFA6DEA000", "vmaddr" : "7FFF8AB57000", "buildId" : "9F7C2AD8A9A73DE4828DB0F0F166AAA0" }, { "path" : "/usr/lib/system/libxpc.dylib", "machType" : 6, "b" : "7FFFA6DF0000", "vmaddr" : "7FFF8AB5D000", "buildId" : "65E41BB6EBD53D93B0BEB190CEE4DD93" }, { "path" : "/usr/lib/libobjc.A.dylib", "machType" : 6, "b" : "7FFFA62A4000", "vmaddr" : "7FFF8A011000", "buildId" : "F9AFE665A3A23285949519803A565861" }, { "path" : "/usr/lib/libauto.dylib", "machType" : 6, "b" : "7FFFA5712000", "vmaddr" : "7FFF8947F000", "buildId" : "5BBF6A00CC76389D84E7CA88EDADE683" }, { "path" : "/usr/lib/libc++abi.dylib", "machType" : 6, "b" : "7FFFA578A000", "vmaddr" : "7FFF894F7000", "buildId" : "1CEF8ABB7E6D3C2F8E0AE7884478DD23" }, { "path" : "/usr/lib/libDiagnosticMessagesClient.dylib", "machType" : 6, "b" : "7FFFA53BA000", "vmaddr" : "7FFF89127000", "buildId" : "422911A4E2733E88BFC4DF6470E48242" }, { "path" : "/usr/lib/libicucore.A.dylib", "machType" : 6, "b" : "7FFFA5CF2000", "vmaddr" : "7FFF89A5F000", "buildId" : "6B5FDA93AA88318F9608C2A33D602EC7" }, { "path" : "/usr/lib/libcoretls.dylib", "machType" : 6, "b" : "7FFFA57DC000", "vmaddr" : "7FFF89549000", "buildId" : "BCC3253748313E9F876E8C9F4CF52FD3" }, { "path" : "/usr/lib/libcoretls_cfhelpers.dylib", "machType" : 6, "b" : "7FFFA57DD000", "vmaddr" : "7FFF8954A000", "buildId" : "6F37C5AD79993D31A52F7AEED935F32D" }, { "path" : "/usr/lib/libbsm.0.dylib", "machType" : 6, "b" : "7FFFA5713000", "vmaddr" : "7FFF89480000", "buildId" : "20084796B04D3B35A003EA11459557A9" }, { "path" : "/usr/lib/libxar.1.dylib", "machType" : 6, "b" : "7FFFA6973000", "vmaddr" : "7FFF8A6E0000", "buildId" : "58BFB84B66FE3299AA3DBBA178ADEE39" }, { "path" : "/usr/lib/libsqlite3.dylib", "machType" : 6, "b" : "7FFFA6736000", "vmaddr" : "7FFF8A4A3000", "buildId" : "B5BA5C96AB1334A08237DD52A0181DFE" }, { "path" : "/usr/lib/libpam.2.dylib", "machType" : 6, "b" : "7FFFA6677000", "vmaddr" : "7FFF8A3E4000", "buildId" : "71EB0D88DE843C8DA2C558AA282BC5BC" }, { "path" : "/System/Library/Frameworks/IOKit.framework/Versions/A/IOKit", "machType" : 6, "b" : "7FFF9359F000", "vmaddr" : "7FFF7730C000", "buildId" : "163BE7FAB29A348F8B5FE301F2E8C964" }, { "path" : "/usr/lib/libOpenScriptingUtil.dylib", "machType" : 6, "b" : "7FFFA55F3000", "vmaddr" : "7FFF89360000", "buildId" : "D025E180BB3B3FFA98FCB6835354D723" }, { "path" : "/usr/lib/libbz2.1.0.dylib", "machType" : 6, "b" : "7FFFA5724000", "vmaddr" : "7FFF89491000", "buildId" : "6FD3B63F0F863A25BD5BE243F58792C9" }, { "path" : "/usr/lib/libxml2.2.dylib", "machType" : 6, "b" : "7FFFA6984000", "vmaddr" : "7FFF8A6F1000", "buildId" : "E12AF9290FA53214840FC81E6AC9F36E" }, { "path" : "/usr/lib/liblzma.5.dylib", "machType" : 6, "b" : "7FFFA5F1F000", "vmaddr" : "7FFF89C8C000", "buildId" : "44BD027999DD36B58A6EC11432E2098D" }, { "path" : "/usr/lib/libenergytrace.dylib", "machType" : 6, "b" : "7FFFA5BE9000", "vmaddr" : "7FFF89956000", "buildId" : "A1B040A2797730979ADF34FF181EB970" }, { "path" : "/usr/lib/system/libkxld.dylib", "machType" : 6, "b" : "7FFFA6B9E000", "vmaddr" : "7FFF8A90B000", "buildId" : "875501369353348B9CD9C342B48C5AAF" } ] }}
       mongos(_ZN5mongo15printStackTraceERNSt3__113basic_ostreamIcNS0_11char_traitsIcEEEE+0x3A) [0x10792880a]
       mongos(_ZN5mongo12_GLOBAL__N_111myTerminateEv+0x2FF) [0x107927d6f]
       libc++abi.dylib(_ZSt11__terminatePFvvE+0x8) [0x7fffa57add69]
       libc++abi.dylib(__cxa_rethrow+0x63) [0x7fffa57ad9f2]
       mongos(_ZN5mongo13BackgroundJob7jobBodyEv+0x3E6) [0x1078a4246]
       mongos(_ZNSt3__114__thread_proxyINS_5tupleIJNS_6__bindIMN5mongo13BackgroundJobEFvvEJPS4_EEEEEEEEPvSA_+0x71) [0x1078a59f1]
       libsystem_pthread.dylib(_pthread_body+0xB4) [0x7fffa6db3aab]
       libsystem_pthread.dylib(_pthread_body+0x0) [0x7fffa6db39f7]
       libsystem_pthread.dylib(thread_start+0xD) [0x7fffa6db31fd]
      -----  END BACKTRACE  -----
      

            Assignee:
            Justin Seyster
            Reporter:
            Charlie Swanson
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: